# image-processor

./: .travis.yml  README.md
project/: CMakeLists.txt  CTestCustom.cmake
project/perf/: CMakeLists.txt  perf.cpp  ring_buffer_benchmark.cpp  ring_buffer_perf.cpp
project/src/aggregator/: README.md
project/src/buffers/: CMakeLists.txt  buffer.cpp  buffer.hpp
project/src/producers/memory-mapped/: README.md
project/src/producers/network/: README.md
project/src/queues/: CMakeLists.txt  README.md  ring_buffer.cpp  ring_buffer.hpp
project/src/utils/: CMakeLists.txt  thread_utils.cpp  thread_utils.hpp
project/tests/: buffer_test.cpp  buffertest.cpp  mock_test.cpp  mocktest.cpp  ring_buffer_test.cpp
src/: CMakeLists.txt
src/aggregator/: README.md
src/buffers/: README.md  buffer.cpp  buffer.hpp
src/producers/: README.md
src/producers/memory-mapped/: README.md
src/producers/network/: README.md
src/protocol/: README.md
src/queues/: README.md
src/workers/: README.md
